--- a/Piece_1.Rmd
+++ b/Piece_1.Rmd
@@ -25,36 +25,34 @@ library(survMisc)
 library(hrbrthemes)
 library(geomtextpath)
 
-setwd("/Users/egan/Desktop/Gradschool/My Research")
-data <- read_spss("Current Dataset 2-28.sav")
-view(data)
+data <- read_spss("FDM Dataset for Data Science.sav")
 
 ```
 
 
 
-## Family Decision Making
+## Tragectories and Variations of Family Decision Making
 
+In this piece, I will demonstrate my graphing abilities along with understanding of lmer function.
 
 ### What is Family Decision Making
 
 Adolescents were presented with a variety o topics that families with adolescents often have to make decisions about, and chose the answer that best reflected who made most of the decisions on each topic. The scale ranged from 1 (My parents decide this without discussing it with me) to 5 (I decide this without discussing it with my parents), with 3 representing a joint decision (My parents and I make the decision together).
 
 
+```{r seting up FDM, echo=FALSE}
 
-```{r code to get it up to speed, echo = false}
 data$Country <- as.factor(data$IDN)
 Country <- factor(data$Country) #country into categorical variable
 data$AgeCM <- data$Age - mean(data$Age, na.rm=TRUE) #mean center age
-data$FDMCM <- data$FDM - mean(data$FDM, na.rm=TRUE) #mean center age
+data$FDMCM <- data$FDM - mean(data$FDM, na.rm=TRUE) #mean center FDM
 
+#change values for males from 1 to 0: data$ChGender <- replace(data$ChGender, data$ChGender < 2, 0) 
+#change values for females from 2 to 1: data$ChGender <- replace(data$ChGender, data$ChGender > 0, 1) 
 
+```
 
-#change values for males from 1 to 0 
-data$ChGender <- replace(data$ChGender, data$ChGender < 2, 0) 
-#change values for females from 2 to 1 
-data$ChGender <- replace(data$ChGender, data$ChGender > 0, 1) 
-
+```{r Renaming Countries, echo=FALSE}
 
 #renaming Countries
 levels(data$Country)[levels(data$Country)=='1'] <- 'China-Jinan'
@@ -72,8 +70,82 @@ levels(data$Country)[levels(data$Country)=='12'] <- 'Colombia'
 levels(data$Country)[levels(data$Country)=='13'] <- 'Jordan'
 levels(data$Country)[levels(data$Country)=='16'] <- 'India'
 levels(data$Country)[levels(data$Country)=='17'] <- 'China-Chongqing'
-levels(data$Country)
 data$Country <- relevel(data$Country, ref = 'USA-Hispanic')
+
+```
+### Data Being Used 
+
+Several different variables were used for the following analyses. Alongside Family Decision Making (FDM), Age (AgeCM), Socio-economic Status (SES), Gender (ChGender), and Country of origin were used to help identify potential trends in the data. Below are the countries utilized for this dataset.
+
+```{r showing data}
+levels(data$Country)
+
+```
+
+## Modeling and Visual
+
+My first step was to create a multi-level model. The model below uses Family Decision Making as the outcome. The inputs were gender, country, and an interaction between age and country.
+
+```{r multilevel model}
+model.FDM_outcome <- lmer(FDM ~  SES + ChGender + AgeCM + Country + AgeCM*Country + (1|ID), data = data)
+FDM_No_Country <- lmer(FDM ~  SES + ChGender + AgeCM + (1|ID), data = data)
+```
+
+
+I can now create a line graph to plot the multilevel model.
+
+```{r plot model}
+data$Age_Exact <- round(data$Age, digits = 0)
+
+data %>%
+ggplot(
+  aes(
+    x=Age_Exact, 
+    y = FDM, 
+    group = Country, 
+    color = Country,
+    )) + 
+  geom_line(stat = "summary", fun = "mean", alpha = .5) +
+  theme_bw() +
+  scale_color_manual(values=c("#000000","#ff0000","#8F00FF", "#0bb4ff", "#50e991", "#e6d800", "#fb19f5", "#ffa300", "#dc0ab4", "#0000fB", "#b3d4ff", "#00bfa0", "#00ffff")) +
+  labs(
+    x = "Age", 
+    y = "Family Decision Making", 
+    color = "Country",
+    title = "Age and Country Effects on Family Decision Making"
+    ) +
+  theme(plot.title = element_text(hjust=0.5),legend.key.size = unit(1.2, 'cm'))
+
+```
+
+```{r plot model}
+
+data %>%
+ggplot(data, aes(x=Age_Exact, y = FDM)) + 
+  geom_line(stat = "summary", fun = "mean") +
+  theme_bw() +
+  labs(
+    x = "Age", 
+    y = "Family Decision Making", 
+    title = "Age and Country Effects on Family Decision Making"
+    ) +
+  theme(plot.title = element_text(hjust=0.5),legend.key.size = unit(1.2, 'cm'))
+
+```
+
+
+
+```{r US Data}
+
+USdata <- subset(data,IDN ==9 | IDN == 10 | IDN == 11)
+USdata$Country <- as.factor(USdata$IDN)
+Country <- factor(data$Country) #country into categorical variable
+levels(USdata$Country)[levels(USdata$Country)=='9'] <- 'USA-African American'
+levels(USdata$Country)[levels(USdata$Country)=='10'] <- 'USA-European American'
+levels(USdata$Country)[levels(USdata$Country)=='11'] <- 'USA-Hispanic'
+USdata$Country <- relevel(USdata$Country, ref = 'USA-European American')
+USdata$AgeCM <- USdata$Age - mean(USdata$Age, na.rm=TRUE) #mean center age
+USdata$FDMCM <- USdata$FDM - mean(USdata$FDM, na.rm=TRUE) #mean center age
 
 ```
 
