--- a/Piece_1.Rmd
+++ b/Piece_1.Rmd
@@ -40,7 +40,7 @@ In this piece, I will demonstrate my graphing abilities along with understanding
 Adolescents were presented with a variety o topics that families with adolescents often have to make decisions about, and chose the answer that best reflected who made most of the decisions on each topic. The scale ranged from 1 (My parents decide this without discussing it with me) to 5 (I decide this without discussing it with my parents), with 3 representing a joint decision (My parents and I make the decision together).
 
 
-```{r seting up FDM, echo=FALSE}
+```{r seting up FDM, echo = FALSE}
 
 data$Country <- as.factor(data$IDN)
 Country <- factor(data$Country) #country into categorical variable
@@ -75,67 +75,13 @@ data$Country <- relevel(data$Country, ref = 'USA-Hispanic')
 ```
 ### Data Being Used 
 
-Several different variables were used for the following analyses. Alongside Family Decision Making (FDM), Age (AgeCM), Socio-economic Status (SES), Gender (ChGender), and Country of origin were used to help identify potential trends in the data. Below are the countries utilized for this dataset.
+Several different variables were used for the following analyses. Alongside Family Decision Making (FDM), Age (AgeCM), Socio-economic Status (SES), Gender (ChGender), and Country of origin were used to help identify potential trends in the data. Below are the countries utilized in this dataset. For now, I will only be working with people from the United States. 
 
 ```{r showing data}
 levels(data$Country)
 
 ```
-
-## Modeling and Visual
-
-My first step was to create a multi-level model. The model below uses Family Decision Making as the outcome. The inputs were gender, country, and an interaction between age and country.
-
-```{r multilevel model}
-model.FDM_outcome <- lmer(FDM ~  SES + ChGender + AgeCM + Country + AgeCM*Country + (1|ID), data = data)
-FDM_No_Country <- lmer(FDM ~  SES + ChGender + AgeCM + (1|ID), data = data)
-```
-
-
-I can now create a line graph to plot the multilevel model.
-
-```{r plot model}
-data$Age_Exact <- round(data$Age, digits = 0)
-
-data %>%
-ggplot(
-  aes(
-    x=Age_Exact, 
-    y = FDM, 
-    group = Country, 
-    color = Country,
-    )) + 
-  geom_line(stat = "summary", fun = "mean", alpha = .5) +
-  theme_bw() +
-  scale_color_manual(values=c("#000000","#ff0000","#8F00FF", "#0bb4ff", "#50e991", "#e6d800", "#fb19f5", "#ffa300", "#dc0ab4", "#0000fB", "#b3d4ff", "#00bfa0", "#00ffff")) +
-  labs(
-    x = "Age", 
-    y = "Family Decision Making", 
-    color = "Country",
-    title = "Age and Country Effects on Family Decision Making"
-    ) +
-  theme(plot.title = element_text(hjust=0.5),legend.key.size = unit(1.2, 'cm'))
-
-```
-
-```{r plot model}
-
-data %>%
-ggplot(data, aes(x=Age_Exact, y = FDM)) + 
-  geom_line(stat = "summary", fun = "mean") +
-  theme_bw() +
-  labs(
-    x = "Age", 
-    y = "Family Decision Making", 
-    title = "Age and Country Effects on Family Decision Making"
-    ) +
-  theme(plot.title = element_text(hjust=0.5),legend.key.size = unit(1.2, 'cm'))
-
-```
-
-
-
-```{r US Data}
+```{r US data setup, echo = FALSE}
 
 USdata <- subset(data,IDN ==9 | IDN == 10 | IDN == 11)
 USdata$Country <- as.factor(USdata$IDN)
@@ -146,7 +92,42 @@ levels(USdata$Country)[levels(USdata$Country)=='11'] <- 'USA-Hispanic'
 USdata$Country <- relevel(USdata$Country, ref = 'USA-European American')
 USdata$AgeCM <- USdata$Age - mean(USdata$Age, na.rm=TRUE) #mean center age
 USdata$FDMCM <- USdata$FDM - mean(USdata$FDM, na.rm=TRUE) #mean center age
+data$Age_Exact <- round(data$Age, digits = 0)
 
 ```
 
+## Plotting Family Decision Making in the United States
 
+
+
+```{r multilevel model, echo = FALSE}
+#TEXT FOR IF I INCLUDE MY MODEL:   My first step was to create a multi-level model. The model below uses Family Decision Making as the outcome. The inputs were gender, country, and an interaction between age and country.
+
+#model I used for FDM. Looking to incorporate this somehow? Not sure how.
+model.FDM_USA <- lmer(FDM ~ SES + ChGender + AgeCM + Country +   + Country*AgeCM + (1|ID), data = USdata)
+```
+
+
+I can now create a line graph to plot the multilevel model.
+
+```{r plot model}
+
+USdata %>%
+ggplot(
+  aes(
+    x=Age,
+    y = FDM,
+    group = Country, 
+    color = Country,
+    )) + 
+  geom_smooth(se = FALSE) +
+  theme_bw() +
+  scale_color_manual(values=c("#0000ff", "#ff0000","#008000")) +
+  labs(
+    x = "Age", 
+    y = "Family Decision Making", 
+    color = "Ethnicity",
+    title = "USA Age and Ethnicity Effects on Family Decision Making"
+    )
+
+```
